--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,12 @@ body, html {
 
 h1 {
     font-size: 3em;
-    text-shadow: 0 0 10px #00ff00;
+    text-shadow: 0 0 10px #344afb;
 }
 
 p {
     font-size: 1.5em;
-    text-shadow: 0 0 5px #00ff00;
+    text-shadow: 0 0 5px #344afb;
 }
 
 button {
