--- a/styles.css
+++ b/styles.css
@@ -1,70 +1,47 @@
 body, html {
     height: 100%;
     margin: 0;
-    padding: 0;
+    font-family: Arial, sans-serif;
+}
+
+.main-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
+    color: #fff;
     background-color: #000;
-    overflow: hidden; /* This prevents any scrolling due to overflowing elements */
-    font-family: 'Courier New', Courier, monospace;
-}
-
-#card3D {
-    position: absolute; /* This will take it out of the normal flow */
-    width: 50vw; /* Half of the viewport width */
-    height: 50vh; /* Half of the viewport height */
-    z-index: 1;
-}
-
-.content {
-    position: absolute;
-    top: 55vh; /* Starts just below the middle of the viewport */
-    width: 100%;
     text-align: center;
-    z-index: 0;
 }
 
-.glow {
-    text-shadow: 0 0 8px #0052ff;
-    color: #0052ff;
+h1 {
+    font-size: 3em;
+    text-shadow: 0 0 10px #344afb;
 }
 
-.divider {
-    width: 80%;
-    border-bottom: 1px solid white;
-    margin: 20px auto;
-}
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    font-size: 0.75em;
-    color: white;
-}
-
-.links, .button-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column; /* Stacks links and buttons vertically */
-    margin-top: 20px;
+p {
+    font-size: 1.5em;
+    text-shadow: 0 0 5px #344afb;
 }
 
 button {
-    background-color: #0052ff;
-    border: none;
-    color: white;
     padding: 10px 20px;
+    font-size: 1em;
+    color: #fff;
+    background-color: #222;
+    border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 1em;
-    transition: background-color 0.3s;
+    outline: none;
+    box-shadow: 0 0 5px #00ff00;
+    transition: background-color 0.3s ease;
 }
 
 button:hover {
-    background-color: #0039cc;
+    background-color: #333;
 }
 
-
+button:focus {
+    background-color: #444;
+}
