--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 }
 #baseText {
     font-size: 24px;
-    bottom: 20%;
+    bottom: 15%;  /* Adjusted bottom position */
 }
 #playButton a {
     font-size: 24px;
@@ -38,6 +38,5 @@ body {
     box-shadow: 0 0 15px #007bff, 0 0 25px #007bff, 0 0 35px #007bff, 0 0 45px #007bff;
 }
 #playButton {
-    bottom: 10%;
+    bottom: 5%;  /* Adjusted bottom position */
 }
-
