--- a/styles.css
+++ b/styles.css
@@ -2,26 +2,23 @@ body {
     margin: 0;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background: #000;
 }
 #card3D {
-    width: 100%;
-    height: 80%;
-    position: absolute;
-    top: 10%;
+    width: 50%;  /* You can adjust this width as needed */
+    height: 50vh; /* Adjust height as needed */
 }
 #baseText, #playButton {
-    position: absolute;
-    width: 100%;
     text-align: center;
     color: white;
     font-family: 'Orbitron', sans-serif;
 }
 #baseText {
     font-size: 24px;
-    bottom: 15%;  /* Adjusted bottom position */
+    margin-top: 20px; /* Space above the text */
 }
 #playButton a {
     font-size: 24px;
@@ -38,5 +35,6 @@ body {
     box-shadow: 0 0 15px #007bff, 0 0 25px #007bff, 0 0 35px #007bff, 0 0 45px #007bff;
 }
 #playButton {
-    bottom: 5%;  /* Adjusted bottom position */
+    margin-top: 20px; /* Space above the button */
 }
+
